[workspace]
resolver = "2"
members = [
    "kfc",
    "kfc-base",
    "kfc-blob",
    "lua",

    "cli-legacy",
]

[workspace.package]
edition = "2021"
version = "0.1.0"
authors = ["Brabb3l"]
license = "GPL-3.0-or-later"
license-file = "LICENSE"

[workspace.dependencies]
kfc = { path = "kfc", features = ["blob"] }

anyhow = { version = "1.0.95", features = ["backtrace"] }
thiserror = "2.0.11"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
bitflags = { version = "2.8.0", features = ["serde"] }
parking_lot = "0.12.3"
walkdir = "2.5.0"
