[package]
name = "cli-legacy"
edition.workspace = true
version.workspace = true
authors.workspace = true

[dependencies]
kfc.workspace = true

anyhow.workspace = true
serde_json.workspace = true
serde.workspace = true
walkdir.workspace = true

clap = "4.5.0"
clap_derive = "4.5.0"
indicatif = "0.17.11"
colored = "3.0.0"
image = "0.25.5"
crossbeam-channel = "0.5.15"

[[bin]]
name = "kfc-parser"
path = "src/main.rs"
