[package]
name = "cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
parser = { path = "../parser" }
shared = { path = "../shared" }

anyhow = { version = "1.0.79", features = ["backtrace"] }
clap = "4.5.0"
clap_derive = "4.5.0"
serde_json = "1.0.138"
walkdir = "2.5.0"

[[bin]]
name = "kfc-parser"
path = "src/main.rs"
