[package]
name = "cli"
version.workspace = true
edition.workspace = true

[dependencies]
parser = { path = "../parser" }
shared = { path = "../shared" }

anyhow.workspace = true
serde_json.workspace = true
serde.workspace = true

clap = "4.5.0"
clap_derive = "4.5.0"
walkdir = "2.5.0"
indicatif = "0.17.11"
colored = "3.0.0"
image = "0.25.5"

[[bin]]
name = "kfc-parser"
path = "src/main.rs"
