[package]
name = "kfc"
edition.workspace = true
version.workspace = true
authors.workspace = true

[dependencies]
kfc-base = { path = "../kfc-base" }
kfc-descriptor = { path = "../kfc-descriptor", optional = true }
kfc-blob = { path = "../kfc-blob", optional = true }

[features]
default = ["descriptor"]
descriptor = ["kfc-descriptor"]
blob = ["kfc-blob"]

[dev-dependencies]
serde_json.workspace = true
