[package]
name = "parser"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { version = "1.0.72", features = ["backtrace"] }
crossbeam-channel = "0.5.11"
hound = "3.5.1"
image = "0.24.8"
serde = { version = "1.0.182", features = ["derive"] }
serde_json = "1.0.104"
thiserror = "1.0.56"
shared = { path = "../shared" }
texture2ddecoder = "0.0.5"
