[package]
name = "parser"
version = "0.1.0"
edition = "2021"

[dependencies]
shared = { path = "../shared" }

anyhow = { version = "1.0.72", features = ["backtrace"] }
thiserror = "1.0.56"
half = "2.3.1"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"

hound = "3.5.1"
image = "0.24.8"
texture2ddecoder = "0.0.5"
