[package]
name = "parser"
version.workspace = true
edition.workspace = true

[dependencies]
shared = { path = "../shared" }

anyhow.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
bitflags.workspace = true

half = "2.3.1"
hound = "3.5.1"
image = "0.24.8"
texture2ddecoder = "0.0.5"
