[package]
name = "mod-loader-base"
edition.workspace = true
version.workspace = true
authors.workspace = true

[dependencies]
thiserror.workspace = true
walkdir.workspace = true
serde.workspace = true
serde_json.workspace = true
indexmap.workspace = true
parking_lot.workspace = true
camino.workspace = true

tracing.workspace = true

zip = "4.2.0"
