[package]
name = "mod-loader-lua"
edition.workspace = true
version.workspace = true
authors.workspace = true

[dependencies]
kfc.workspace = true
mod-loader = { package = "mod-loader-base", path = "../mod-loader-base" }

thiserror.workspace = true
walkdir.workspace = true
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
indexmap.workspace = true
parking_lot.workspace = true
uuid.workspace = true
crc.workspace = true
camino.workspace = true
bitflags.workspace = true

half.workspace = true
image.workspace = true

tracing.workspace = true

mlua = { version = "0.11.2", features = ["lua54", "error-send", "vendored"] }
once_cell = "1.21.3"
ouroboros = "0.18.5"
