[package]
name = "mod-manager-cli"
edition.workspace = true
version.workspace = true
authors.workspace = true

[dependencies]
mod-loader = { path = "../mod-loader", features = ["lua"] }

serde.workspace = true
serde_json.workspace = true
image.workspace = true
semver.workspace = true

clap = "4.5.0"
clap_derive = "4.5.0"
indicatif = "0.18.0"
colored = "3.0.0"
dialoguer = "0.11.0"

tracing.workspace = true
tracing-subscriber.workspace = true

[[bin]]
name = "emm"
path = "src/main.rs"
